# CDL6000

./: .gitattributes  .gitignore  CDL6000.code-workspace  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-workflow.txt  main.yml
config/: config.yml
docs/obsidian-vault/.obsidian/: app.json  workspace.json
docs/obsidian-vault/00-overview/: index.md  test-git-integration.md
docs/obsidian-vault/01-specs/: 01_project_specs.md  02_project_complete_specifications.md  index.md
docs/obsidian-vault/02-design/: 01_design_doc.md  02_jupyter_analysis_goals.md  04_outcomes-user-scenarios.md  index.md  markdown-style-guides.md  proposal.md
docs/obsidian-vault/03-impl/: 01_assistant_analysis_instruction_framework.md  02_code_assistant_implementation_guide.md  03_implementation_guide.md  index.md
docs/obsidian-vault/04-test/: 01_assistant_custom_instructions.md  index.md
docs/obsidian-vault/05-deploy/: index.md
docs/obsidian-vault/06-maintain/: development-guide.md  git.md  index.md
notebooks/: 00_initial_exploration.html  00_initial_exploration.ipynb  01_eda_legal_text_classification.html  01_eda_legal_text_classification.ipynb  02_text_preprocessing.html  02_text_preprocessing.ipynb  03_feature_engineering.html  03_feature_engineering.ipynb  initial-try1.py
scripts/: generate_sample_data.py  setup_jupyter_environment.py
src/: __init__.py  main.py
src/core/: __init__.py  gpu_monitor.py  preprocessor.py  test_cuda.py
src/ml/: legal_extractor.py
src/utils/: __init__.py  experiment_tracker.py  logger.py
(+55 files in other folders)
